--- a/index.html
+++ b/index.html
@@ -763,13 +763,19 @@ document.addEventListener("DOMContentLoaded", function () {
         <!-- Video Presentation Section -->
         <section class="video-section", style="background-color: #df1783">
             <h2 style="color: white">Watch the Synergy Introduction Video</h2>
-            <div class="video-container">
-                <iframe src="https://youtube.com/embed/n-4gTbKU0ac" 
-                        frameborder="0" 
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                        allowfullscreen>
-                </iframe>
-            </div>
+
+
+<div style="display: flex; justify-content: center;">
+<div id="div-3" style="margin-top: 0px; border-radius: 0px; padding: 0; background-color: #df1783; background-size: cover; background-position: center; width: 100%; max-width: 100%; border: none;">
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; border-radius: 7px; background-color: #fff;">
+<figure>
+<iframe src="https://www.youtube.com/embed/n-4gTbKU0ac" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 20px;" id="iframe-1" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+</figure>
+</div>
+</div>
+</div>
+
+            
             <p style="color: white; text-align: center; margin-top: 20px;">A quick visual guide to how Synergy can help accelerate your business growth.</p>
         </section>
         
