--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <div style="display: flex; justify-content: center;">
 <div id="div-3" style="margin-top: 0px; border-radius: 0px; padding: 0; background-color: #df1783; background-size: cover; background-position: center; width: 100%; max-width: 100%; border: none;">
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; border-radius: 0px; background-color: #df1783; margin-left: 30px; margin-right: 30px;">
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; width: 100%; border-radius: 0px; background-color: #df1783; margin: 30px;">
 <figure>
 <iframe src="https://www.youtube.com/embed/n-4gTbKU0ac" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 20px;" id="iframe-1" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 </figure>
