--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                         class="logo-image"
                     />
                 </div>
-                <h1 class="hero-title" style="color: white;">Welcome to<br>Synergy, Business Hub! 🎉</h1>
+                <h1 class="hero-title" style="color: white;">Synergy, Business Hub</h1>
                 <p class="hero-subtitle" style="color: white;">Your All-in-One Cloud Business Center</p>
             </div>
         </section>
@@ -660,8 +660,8 @@
         <!-- Introduction Section -->
         <section class="intro-section">
             <div class="content-wrapper">
-                <h2>Hello and Welcome Aboard!</h2>
-                <p>We at <strong>Bebell Digital Solutions</strong> are both honored and excited to guide you through <strong>Synergy, Business Hub</strong> 🚀.</p>
+                <h2>Hello and Welcome Aboard! 🎉</h2>
+                <p>We at <strong>Bebell Digital Solutions</strong> are both honored and excited to guide you through <strong>Synergy, Business Hub</strong>.</p>
                 <p>Building and scaling an online business can be challenging with so much to learn, countless tools to evaluate, and endless tasks to manage. That's why we created Synergy - a centralized cloud space designed to be your <strong>operational headquarters, knowledge base, and resource center</strong> all in one.</p>
                 <p>Here you'll find everything you need: from initial planning to optimization and large-scale growth. Our mission is to provide the guidance, tools, and knowledge your digital business needs to not just survive, but thrive in today's competitive landscape.</p>
             </div>
