--- a/spanish.html
+++ b/spanish.html
@@ -130,7 +130,7 @@
         
         /* Hero Section */
         .hero-section {
-            background: url('https://bucket.mlcdn.com/a/3336/3336910/images/2bbcd4eccc9d3c09a9054f5054c7d2d97ab56288.jpeg') no-repeat center center/cover;
+            background: url('https://bucket.mlcdn.com/a/3336/3336910/images/1d076ad5af4652ef343cfbdc74bc78a58d5f4466.png') no-repeat center center/cover;
             color: white;
             text-align: center;
             padding: 120px 20px;
