--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         
         /* Video Section Styles */
         .video-section {
-            background-color: var(--primary-color);
+            background-color: #fde9f2;
             text-align: center;
         }
         
